// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIToastActions /> should render a passed qaHook as an automation id 1`] = `
<div
  className="xui-actions xui-toast--actions"
  data-automationid="toast-actions"
>
  <button
    className="xui-button xui-toast--action xui-button-borderless-main xui-button-small"
    disabled={false}
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    Action 1
  </button>
  <button
    className="xui-button xui-toast--action xui-button-borderless-main xui-button-small"
    disabled={false}
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    Action 2
  </button>
</div>
`;

exports[`<XUIToastActions /> should render actions passed in as children 1`] = `
<div
  className="xui-actions custom-class xui-toast--actions"
  data-automationid="toast-actions"
>
  <a
    className="xui-button xui-toast--action xui-button-borderless-main xui-button-small"
    disabled={false}
    href=""
    onClick={[Function]}
    tabIndex={0}
  >
    Action 1
  </a>
  <a
    className="xui-button xui-toast--action xui-button-borderless-main xui-button-small"
    disabled={false}
    href=""
    onClick={[Function]}
    tabIndex={0}
  >
    Action 2
  </a>
</div>
`;

exports[`<XUIToastActions /> should render actions passed in using the primaryAction and secondaryAction props 1`] = `
<div
  className="xui-actions custom-class xui-toast--actions"
  data-automationid="toast-actions"
>
  <a
    className="xui-button xui-actions--primary xui-toast--action xui-button-borderless-main xui-button-small"
    disabled={false}
    href=""
    onClick={[Function]}
    tabIndex={0}
  >
    Action 1
  </a>
  <a
    className="xui-button xui-actions--secondary xui-toast--action xui-button-borderless-main xui-button-small"
    disabled={false}
    href=""
    onClick={[Function]}
    tabIndex={0}
  >
    Action 2
  </a>
</div>
`;
